--- a/.eslintrc
+++ b/.eslintrc
@@ -1,90 +1,49 @@
 {
-  "extends": ["airbnb", "prettier", "prettier/react"],
-  "parser": "babel-eslint",
-  "parserOptions": {
-    "ecmaVersion": 2017,
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true,
-      "impliedStrict": true,
-      "classes": true
+    "parser": "babel-eslint",
+    "extends": ["airbnb", "prettier"],
+    "plugins": ["prettier"],
+    "rules": {
+        "prettier/prettier": [
+            "error",
+            {
+                "trailingComma": "es5",
+                "singleQuote": true,
+                "printWidth": 100
+            }
+        ],
+        "react/prefer-stateless-function": "off",
+        "react/jsx-filename-extension": "off",
+        "no-use-before-define": "off",
+        "react/jsx-curly-spacing": "off",
+        "react/jsx-equals-spacing": "off",
+        "react/jsx-first-prop-new-line": "off",
+        "react/jsx-indent": "off",
+        "react/jsx-indent-props": "off",
+        "react/jsx-max-props-per-line": "off",
+        "react/jsx-tag-spacing": "off",
+        "react/jsx-wrap-multilines": "off",
+        "no-unused-expressions": "off",
+        "operator-linebreak": "off",
+        "react/require-default-props": "off",
+        "jsx-a11y/click-events-have-key-events": "off",
+        "jsx-a11y/no-noninteractive-element-interactions": "off",
+        "object-curly-newline": [
+            "error",
+            {
+                "consistent": true
+            }
+        ],
+        "react/forbid-prop-types": [
+            "error",
+            {
+                "forbid": ["any"]
+            }
+        ],
+        "react/jsx-closing-bracket-location": ["on", "tag-aligned"],
+        "consistent-return": "off",
+        "import/no-extraneous-dependencies": "off"
+    },
+    "env": {
+        "browser": true
     }
-  },
-  "globals": {
-    "tw": true
-  },
-  "env": {
-    "browser": true,
-    "node": true,
-    "jquery": true
-  },
-  "rules": {
-    "no-unused-vars": [
-      1,
-      {
-        "argsIgnorePattern": "res|next|stage|^err|on|config"
-      }
-    ],
-    "arrow-body-style": [2, "as-needed"],
-    "react/prop-types": 0,
-    "no-param-reassign": [
-      2,
-      {
-        "props": false
-      }
-    ],
-    "no-unused-expressions": [
-      1, {
-        "allowTaggedTemplates": true
-      }
-    ],
-    "no-console": 0,
-    "no-use-before-define": 0,
-    "no-underscore-dangle": 0,
-    "linebreak-style": 0,
-    "consistent-return": 0,
-    "import": 0,
-    "func-names": 0,
-    "import/no-extraneous-dependencies": 0,
-    "import/prefer-default-export": 0,
-    "space-before-function-paren": 0,
-    "import/extensions": 0,
-    "react/no-danger": 0,
-    "react/display-name": 1,
-    "react/react-in-jsx-scope": 0,
-    "react/forbid-prop-types": 0,
-    "react/no-unescaped-entities": 0,
-    "jsx-a11y/accessible-emoji": 0,
-    "react/jsx-filename-extension": [
-      1,
-      {
-        "extensions": [".js", ".jsx"]
-      }
-    ],
-    "quotes": [
-      2,
-      "single",
-      {
-        "avoidEscape": true,
-        "allowTemplateLiterals": true
-      }
-    ],
-    "indent": ["error", 2, {"SwitchCase": 1}],
-    "prettier/prettier": [
-      "error",
-      {
-        "trailingComma": "es5",
-        "semi": false,
-        "singleQuote": true,
-        "printWidth": 120
-      }
-    ],
-    "jsx-a11y/href-no-hash": "off",
-    "jsx-a11y/anchor-is-valid": [
-      "warn",
-      {
-        "aspects": ["invalidHref"]
-      }
-    ]
-  },
-  "plugins": ["prettier"]
 }
