--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^16.8.6",
     "react-feather": "^1.1.6",
     "react-helmet": "^5.2.1",
+    "react-image-lightbox": "5.1.0",
     "react-player": "1.11.0",
     "react-spring": "^8.0.20",
     "rebass": "^3.1.0",
