--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "2.2.6",
     "gatsby": "^2.5.5",
     "gatsby-cli": "^2.5.15",
+    "gatsby-image": "2.1.1",
     "gatsby-plugin-gtag": "^1.0.10",
     "gatsby-plugin-netlify": "^2.0.17",
     "gatsby-plugin-offline": "^2.1.1",
