--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby": "^2.5.5",
     "gatsby-cli": "^2.5.15",
     "gatsby-image": "2.1.1",
+    "gatsby-plugin-dark-mode": "1.1.0",
     "gatsby-plugin-gtag": "^1.0.10",
     "gatsby-plugin-netlify": "^2.0.17",
     "gatsby-plugin-offline": "^2.1.1",
