--- a/package.json
+++ b/package.json
@@ -18,39 +18,42 @@
     "@fortawesome/react-fontawesome": "0.1.4",
     "babel-plugin-styled-components": "^1.10.0",
     "classnames": "2.2.6",
-    "gatsby": "^2.5.5",
+    "gatsby": "2.18.17",
     "gatsby-cli": "^2.5.15",
-    "gatsby-image": "2.1.1",
+    "gatsby-image": "2.2.37",
     "gatsby-plugin-dark-mode": "1.1.0",
     "gatsby-plugin-gtag": "^1.0.10",
-    "gatsby-plugin-netlify": "^2.0.17",
+    "gatsby-plugin-netlify": "2.1.30",
     "gatsby-plugin-offline": "^2.1.1",
-    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-react-helmet": "3.1.18",
     "gatsby-plugin-sharp": "^2.0.37",
-    "gatsby-plugin-sitemap": "^2.1.0",
-    "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-plugin-styled-jsx": "3.0.5",
-    "gatsby-plugin-subfont": "^1.0.6",
-    "gatsby-remark-prismjs": "^3.2.9",
-    "gatsby-source-contentful": "^2.0.60",
+    "gatsby-plugin-sitemap": "2.2.24",
+    "gatsby-plugin-styled-components": "3.1.16",
+    "gatsby-plugin-styled-jsx": "3.1.17",
+    "gatsby-plugin-subfont": "1.1.19",
+    "gatsby-plugin-typography": "2.3.20",
+    "gatsby-remark-prismjs": "3.3.28",
+    "gatsby-source-contentful": "2.1.73",
     "gatsby-source-filesystem": "^2.0.36",
-    "gatsby-transformer-json": "^2.1.11",
-    "gatsby-transformer-remark": "^2.3.12",
-    "gatsby-transformer-sharp": "^2.1.19",
+    "gatsby-transformer-json": "2.2.22",
+    "gatsby-transformer-remark": "2.6.45",
+    "gatsby-transformer-sharp": "2.3.9",
     "is-absolute-url": "^3.0.0",
     "lodash": "^4.17.11",
-    "prismjs": "^1.16.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "prismjs": "1.17.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "react-feather": "^1.1.6",
     "react-helmet": "^5.2.1",
     "react-image-lightbox": "5.1.0",
     "react-player": "1.11.0",
     "react-spring": "^8.0.20",
+    "react-typography": "0.16.19",
     "rebass": "^3.1.0",
     "slash": "^3.0.0",
     "styled-components": "^4.2.0",
-    "styled-jsx": "3.2.1"
+    "styled-jsx": "3.2.1",
+    "typography": "0.16.19"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
