--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@fortawesome/react-fontawesome": "0.1.8",
     "babel-plugin-styled-components": "^1.10.0",
     "classnames": "2.2.6",
-    "gatsby": "2.18.17",
+    "gatsby": "2.19.16",
     "gatsby-cli": "^2.5.15",
     "gatsby-image": "2.2.37",
     "gatsby-plugin-dark-mode": "1.1.0",
@@ -26,7 +26,7 @@
     "gatsby-plugin-netlify": "2.1.30",
     "gatsby-plugin-offline": "^3.0.30",
     "gatsby-plugin-react-helmet": "3.1.18",
-    "gatsby-plugin-sharp": "^2.0.37",
+    "gatsby-plugin-sharp": "2.4.5",
     "gatsby-plugin-sitemap": "2.2.24",
     "gatsby-plugin-styled-components": "3.1.16",
     "gatsby-plugin-styled-jsx": "3.1.17",
