--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "gatsby-cli": "^2.5.15",
     "gatsby-image": "2.2.37",
     "gatsby-plugin-dark-mode": "1.1.0",
-    "gatsby-plugin-gtag": "^1.0.10",
+    "gatsby-plugin-gtag": "1.0.10",
     "gatsby-plugin-netlify": "2.1.30",
-    "gatsby-plugin-offline": "^3.0.30",
+    "gatsby-plugin-offline": "3.0.30",
     "gatsby-plugin-react-helmet": "3.1.18",
     "gatsby-plugin-sharp": "2.4.12",
     "gatsby-plugin-sitemap": "2.2.24",
@@ -38,13 +38,13 @@
     "gatsby-transformer-json": "2.2.22",
     "gatsby-transformer-remark": "2.6.45",
     "gatsby-transformer-sharp": "2.3.9",
-    "is-absolute-url": "^3.0.0",
-    "lodash": "^4.17.11",
+    "is-absolute-url": "3.0.0",
+    "lodash": "4.17.11",
     "prismjs": "1.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-feather": "^2.0.3",
-    "react-helmet": "^5.2.1",
+    "react-feather": "2.0.3",
+    "react-helmet": "5.2.1",
     "react-image-lightbox": "5.1.1",
     "react-player": "1.14.2",
     "react-spring": "^8.0.20",
@@ -56,8 +56,8 @@
     "typography": "0.16.19"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-eslint": "10.0.1",
+    "babel-preset-react": "6.24.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "6.9.0",
@@ -65,8 +65,8 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.17.0",
-    "husky": "^3.1.0",
-    "lint-staged": "^9.5.0",
+    "husky": "3.1.0",
+    "lint-staged": "9.5.0",
     "prettier": "1.19.1",
     "prettier-eslint": "9.0.1",
     "prettier-eslint-cli": "5.0.0"
