--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@fortawesome/free-brands-svg-icons": "5.12.0",
     "@fortawesome/free-solid-svg-icons": "5.12.0",
     "@fortawesome/react-fontawesome": "0.1.8",
-    "babel-plugin-styled-components": "^1.10.0",
+    "babel-plugin-styled-components": "1.10.0",
     "classnames": "2.2.6",
     "gatsby": "2.19.16",
-    "gatsby-cli": "^2.5.15",
+    "gatsby-cli": "2.5.15",
     "gatsby-image": "2.2.37",
     "gatsby-plugin-dark-mode": "1.1.0",
     "gatsby-plugin-gtag": "1.0.10",
@@ -34,7 +34,7 @@
     "gatsby-plugin-typography": "2.3.20",
     "gatsby-remark-prismjs": "3.3.28",
     "gatsby-source-contentful": "2.1.73",
-    "gatsby-source-filesystem": "^2.0.36",
+    "gatsby-source-filesystem": "2.0.36",
     "gatsby-transformer-json": "2.2.22",
     "gatsby-transformer-remark": "2.6.45",
     "gatsby-transformer-sharp": "2.3.9",
@@ -47,18 +47,18 @@
     "react-helmet": "5.2.1",
     "react-image-lightbox": "5.1.1",
     "react-player": "1.14.2",
-    "react-spring": "^8.0.20",
+    "react-spring": "8.0.20",
     "react-typography": "0.16.19",
-    "rebass": "^4.0.7",
-    "slash": "^3.0.0",
-    "styled-components": "^4.2.0",
+    "rebass": "4.0.7",
+    "slash": "3.0.0",
+    "styled-components": "4.2.0",
     "styled-jsx": "3.2.4",
     "typography": "0.16.19"
   },
   "devDependencies": {
     "babel-eslint": "10.0.1",
     "babel-preset-react": "6.24.1",
-    "eslint": "^6.8.0",
+    "eslint": "6.8.0",
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "6.9.0",
     "eslint-plugin-import": "2.19.1",
