--- a/package.json
+++ b/package.json
@@ -12,63 +12,64 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "1.2.26",
-    "@fortawesome/free-brands-svg-icons": "5.12.0",
-    "@fortawesome/free-solid-svg-icons": "5.12.0",
-    "@fortawesome/react-fontawesome": "0.1.8",
-    "babel-plugin-styled-components": "1.10.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.32",
+    "@fortawesome/free-brands-svg-icons": "5.15.1",
+    "@fortawesome/free-solid-svg-icons": "5.15.1",
+    "@fortawesome/react-fontawesome": "0.1.13",
+    "autoprefixer": "10.0.4",
+    "babel-plugin-styled-components": "1.12.0",
     "classnames": "2.2.6",
-    "gatsby": "2.19.16",
-    "gatsby-cli": "2.5.15",
-    "gatsby-image": "2.2.37",
-    "gatsby-plugin-dark-mode": "1.1.0",
-    "gatsby-plugin-gtag": "1.0.10",
-    "gatsby-plugin-netlify": "2.1.30",
-    "gatsby-plugin-offline": "3.0.30",
-    "gatsby-plugin-react-helmet": "3.1.18",
-    "gatsby-plugin-sharp": "2.4.12",
-    "gatsby-plugin-sitemap": "2.2.24",
-    "gatsby-plugin-styled-components": "3.1.16",
-    "gatsby-plugin-styled-jsx": "3.1.17",
-    "gatsby-plugin-subfont": "1.1.19",
-    "gatsby-plugin-typography": "2.3.20",
-    "gatsby-remark-prismjs": "3.3.28",
-    "gatsby-source-contentful": "2.1.73",
-    "gatsby-source-filesystem": "2.0.36",
-    "gatsby-transformer-json": "2.2.22",
-    "gatsby-transformer-remark": "2.6.45",
-    "gatsby-transformer-sharp": "2.3.9",
-    "is-absolute-url": "3.0.0",
-    "lodash": "4.17.11",
-    "prismjs": "1.17.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-feather": "2.0.3",
-    "react-helmet": "5.2.1",
+    "gatsby": "2.28.0",
+    "gatsby-cli": "2.15.0",
+    "gatsby-image": "2.7.0",
+    "gatsby-plugin-dark-mode": "1.1.2",
+    "gatsby-plugin-gtag": "1.0.13",
+    "gatsby-plugin-netlify": "2.7.0",
+    "gatsby-plugin-offline": "3.6.0",
+    "gatsby-plugin-postcss": "3.3.0",
+    "gatsby-plugin-react-helmet": "3.6.0",
+    "gatsby-plugin-sharp": "2.10.0",
+    "gatsby-plugin-sitemap": "2.8.0",
+    "gatsby-plugin-styled-components": "3.6.0",
+    "gatsby-plugin-styled-jsx": "3.6.0",
+    "gatsby-plugin-subfont": "2.5.0",
+    "gatsby-remark-prismjs": "3.9.0",
+    "gatsby-source-contentful": "4.2.0",
+    "gatsby-source-filesystem": "2.7.0",
+    "gatsby-transformer-json": "2.7.0",
+    "gatsby-transformer-remark": "2.12.0",
+    "gatsby-transformer-sharp": "2.8.0",
+    "is-absolute-url": "3.0.3",
+    "lodash": "4.17.20",
+    "postcss": "8.1.14",
+    "prismjs": "1.22.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-feather": "2.0.9",
+    "react-helmet": "6.1.0",
     "react-image-lightbox": "5.1.1",
-    "react-player": "1.14.2",
-    "react-spring": "8.0.20",
-    "react-typography": "0.16.19",
+    "react-player": "2.7.0",
+    "react-spring": "8.0.27",
     "rebass": "4.0.7",
     "slash": "3.0.0",
-    "styled-components": "4.2.0",
-    "styled-jsx": "3.2.4",
-    "typography": "0.16.19"
+    "styled-components": "5.2.1",
+    "styled-jsx": "3.3.2",
+    "tailwindcss": "2.0.1"
   },
   "devDependencies": {
-    "babel-eslint": "10.0.1",
+    "babel-eslint": "10.1.0",
     "babel-preset-react": "6.24.1",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-config-prettier": "6.9.0",
-    "eslint-plugin-import": "2.19.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-prettier": "3.1.2",
-    "eslint-plugin-react": "7.17.0",
-    "husky": "3.1.0",
-    "lint-staged": "9.5.0",
-    "prettier": "1.19.1",
-    "prettier-eslint": "9.0.1",
+    "eslint": "7.15.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "7.0.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.2.0",
+    "eslint-plugin-react": "7.21.5",
+    "husky": "4.3.4",
+    "lint-staged": "10.5.3",
+    "prettier": "2.2.1",
+    "prettier-eslint": "12.0.0",
     "prettier-eslint-cli": "5.0.0"
   },
   "husky": {
